# mim

./: .gitignore  Cargo.toml  README.md  depandencies.md  download-torrent.sh  package-lock.json  package.json  run_server.sh
crates/bencode/src/: bencode_value.rs
crates/dht/: Cargo.toml
crates/dht/src/: bprotocol.rs  dht.rs  persistence.rs  utils.rs
crates/libmim/: Cargo.toml
crates/libmim/src/: chunk_tracker.rs  file_ops.rs  http_api.rs  http_api_client.rs  peer_connection.rs  peer_state.rs  session.rs
crates/libmim_core/: Cargo.toml
crates/mim/: Cargo.toml
crates/mim/src/: main.rs
crates/peer_binary_protocol/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AboutCLI.jsx  Blog.jsx  CN.jsx  DHT.jsx  DownloadTorrent.jsx  Hero.jsx  Navbar.jsx  OS.jsx  Rust.jsx  cliDoc.jsx
frontend/src/components/CN_topics/: Application.jsx  Data_link.jsx  Ethernet.jsx  LayerCard.jsx  Model.jsx  Network.jsx  Physical.jsx  Transport.jsx  index.js
frontend/src/components/DHT_topics/: Communication.jsx  Distance.jsx  KBuckets.jsx  Kademlia.jsx  Model.jsx  Routing.jsx  Visualizing.jsx  index.js
frontend/src/components/OS_topics/: index.js  multi_threading.jsx  process_and_thread_management:.jsx  types_of_os.jsx
frontend/src/constants/: cn.jsx  dht.js  os.jsx  style.js
lib/dht/src/: lib.rs  routing_table.rs
lib/libmim/: Cargo.toml
lib/libmim/src/: dht_utils.rs  lib.rs  torrent_manager.rs  torrent_state.rs  tracker_comms.rs
lib/libmim/src/peer_info_reader/: mod.rs
lib/libmim_core/src/: torrent_metainfo.rs
lib/mim/: Cargo.toml
lib/mim/src/: lib.rs  main.rs
lib/peer_binary_protocol/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/: alpine-standard-3.17.1-x86_64.iso.sha256  alpine-standard-3.17.1-x86_64.iso.torrent  ubuntu-22.04.1-live-server-amd64.iso.torrent
