[workspace]
members = [
    "crates/libmim",
    "crates/mim",
    "crates/buffers",
    "crates/clone_to_owned",
    "crates/bencode",
    "crates/sha1w",
    "crates/libmim_core",
    "crates/peer_binary_protocol",
    "crates/dht"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"