[package]
name = "mim"
description = "A bittorent client"
version = "2.0.0"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2018"

[features]
default = ["sha1-system", "default-tls"]
sha1-system = ["libmim/sha1-system"]
sha1-openssl = ["libmim/sha1-openssl"]
sha1-rust = ["libmim/sha1-rust"]
default-tls = ["libmim/default-tls"]
rust-tls = ["libmim/rust-tls"]

[dependencies]
libmim = {path="../libmim", default-features=false}
dht = {path="../dht"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
anyhow = "1"
clap = {version = "4", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
futures = "0.3"
parse_duration = "2"
reqwest = "*"
serde = {version = "1", features=["derive"]}
serde_json = "1"
size_format = "1"

[dev-dependencies]
futures = {version = "0.3"}